--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,11 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+app_TaskController:
+    path: /tasks
+    controller: App\Controller\TaskController::index
+
+app_Register:
+    path: /register
+    controller: App\Controller\UserController::register
