--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,10 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        proveidor:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -13,6 +17,13 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            form_login:
+                login_path: login
+                check_path: login
+                provider: proveidor
+            logout:
+                path: /logout
+                target: /login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
