--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,6 +10,7 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -18,18 +19,22 @@ security:
             lazy: true
             provider: users_in_memory
             form_login:
+                # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
                 provider: proveidor
+                default_target_path: tasks
+                always_use_default_target_path: true
             logout:
                 path: /logout
-                target: /login
+                target: /
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
