--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,10 +6,6 @@ kernel:
     resource: ../src/Kernel.php
     type: annotation
 
-app_Home:
-    path: /
-    controller: App\Controller\HomeController::index
-
 app_TaskController:
     path: /tasks
     controller: App\Controller\TaskController::index
@@ -18,9 +14,14 @@ app_Register:
     path: /register
     controller: App\Controller\UserController::register
 
+app_home:
+    path: /
+    controller: App\Controller\HomeController::index
+
 login:
     path: /login
     controller: App\Controller\UserController::login
+    
 
 logout:
     path: /logout
