--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,7 +23,7 @@ security:
                 login_path: login
                 check_path: login
                 provider: proveidor
-                default_target_path: app_home
+                default_target_path: app_TaskList
                 always_use_default_target_path: true
             logout:
                 path: /logout
@@ -39,8 +39,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/tasks, roles: ROLE_USER }
 
 when@test:
     security:
