--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -32,3 +32,7 @@ task_create:
 task_detail:
     path: /task/detail/{id}
     controller: App\Controller\TaskController::detail
+
+mytasks:
+    path: /mytasks
+    controller: App\Controller\UserController::myTasks
