--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,8 @@ security:
     access_control:
         # - { path: ^/profile, roles: ROLE_USER }
          - { path: ^/tasks, roles: ROLE_USER }
+         - { path: ^/task, roles: ROLE_USER }
+         - { path: ^/mytasks, roles: ROLE_USER }
 
 when@test:
     security:
